aanvullingen spelfouten verbeterd coil images toegevoegd

--- a/Thesis/abstract.tex
+++ b/Thesis/abstract.tex
@@ -31,7 +31,7 @@ In het bijzonder maken de internetgebruikers steeds meer gebruik van zoekmachine
 gigantische collecties van afbeeldingen te doorzoeken. Deze zoekmachines zijn echter nagenoeg 
 allemaal tekst-gebaseerd. Dit houdt in dat het zoeken enkel steunt op het vergelijken van opgegeven 
 trefwoorden met tekstuele annotaties die toegekend worden aan elke afbeelding. Het hoeft geen
-betoog dat het voor de gebruiker niet altijd gemakkelijk is om op deze manier een aanvaarbaar 
+betoog dat het voor de gebruiker niet altijd gemakkelijk is om op deze manier een aanvaardbaar 
 resultaat te vinden. Bovendien worden deze annotaties grotendeels automatisch gegenereerd, 
 waardoor ze vaak weinig relevant zijn.
 
@@ -39,11 +39,11 @@ De hierboven genoemde problemen kunnen opgelost worden door het zoeken te basere
 van de afbeeldingen. De bestaande inhoud-gebaseerde systemen kunnen echter nog altijd niet 
 toegepast worden op afbeeldingencollecties van dergelijke grote omvang. In deze scriptie geven 
 we daarom een alternatief voor deze meer geavanceerde zoeksystemen, waarbij de grootte van 
-te doorzoeken collectie geen probleem vormt. 
+de te doorzoeken collectie geen probleem vormt. 
 
 Dit alternatief kan gezien worden als een uitbreiding van de tekst-gebaseerde zoeksystemen.
 De zoekactie begint nog steeds met het specifi\"eren van \'e\'en of meerdere trefwoorden, waarop
-het systeem antwoord met een lijst van relevante afbeeldingen. We zorgen er nu echter voor
+het systeem antwoordt met een lijst van relevante afbeeldingen. We zorgen er nu echter voor
 dat de gebruiker een aantal voorbeeld-afbeeldingen kan kiezen uit deze lijst, waarna het
 systeem de zoekresultaten rangschikt op een manier die de gelijkenis met de voorbeelden uitbuit.
 
