--- a/Thesis/fundamenten.tex
+++ b/Thesis/fundamenten.tex
@@ -36,7 +36,7 @@ $$
 \end{definitie}
 
 Bij een \emph{vaagverzameling} kunnen alle waarden tussen 0 en 1 als lidmaatschapsgraad 
-voorkomen. De karakteristiek afbeelding is in dit geval dus een $X - [0,1]$ afbeelding:
+voorkomen. De karakteristieke afbeelding is in dit geval dus een $X - [0,1]$ afbeelding:
 \begin{definitie}
 Zij $X$ een universum. Een vaagverzameling $A$ in $X$ wordt gekarakteriseerd door een $X - [0,1]$
 afbeelding  $\mu_A$:
@@ -69,7 +69,7 @@ $$
 \end{definitie}
 \noindent
 Ook het begrip \emph{cardinaliteit} speelt vaak een belangrijke rol. De cardinaliteit van een 
-een eindige scherpe verzameling wordt gegeven door het aantal elementen in die verzameling. 
+eindige scherpe verzameling wordt gegeven door het aantal elementen in die verzameling. 
 Dit concept kan uitgebreid worden naar vaagverzamelingen door gebruik te maken van het begrip 
 \emph{sigma count}:
 \begin{definitie}
@@ -169,7 +169,7 @@ Het begrip vaagverzameling kan op zijn beurt nog eens uitgebreid worden tot
 \emph{L-vaagverzameling}. Deze uitbreiding is gebaseerd op het concept \emph{tralie}. We geven
 hieronder eerst de definitie van dit concept, samen met de definities van de aanverwante
 begrippen \emph{poset}, \emph{supremum} en \emph{infimum}. Daarna kunnen we dan, gebruik
-makend van dit voorbereid werk, overgaan tot de definitie van een L-vaagverzameling. 
+makend van dit voorbereidend werk, overgaan tot de definitie van een L-vaagverzameling. 
 \begin{definitie}
 Een partieel geordende verzameling (poset) is een koppel $(P,\le)$ bestaande uit een niet-ledige
 verzameling $P$ en een binaire relatie $\le$ over $P$ die reflexief, antisymmetrisch en 
@@ -239,7 +239,7 @@ met $A(x)=(A_1(x),A_2(x),\ldots,A_n(x))$, $\forall x \in X$.
 \subsection{Bewerkingen op L-vaagverzamelingen}
 
 In deze sectie gaan we de begrippen \emph{negator}, \emph{conjunctor} en 
-\emph{disjunctor} uitbreiden naar L-vaag\-ver\-za\-me\-ling\-en. Deze uitbreiding heeft als gevolg dat de
+\emph{disjunctor} uitbreiden naar L-vaag\-ver\-za\-me\-ling\-en. Deze uitbreiding heeft als gevolg dat
 de veralgemeende verzameltechnische bewerkingen $co$, $\cap$ en 
 $\cup$ uit \ref{sectie:bew_op_vaagverz} eveneens toepasbaar zijn op L-vaagverzamelingen.
 
@@ -336,11 +336,11 @@ $$
 \displaystyle M_{I_{3c}}(A,B) & = & \displaystyle \frac{|(A^c \cap B^c) \cup (A \cap B)|)}{|(A^c \cup B^c) \cup (A \cup B)|)}
 \end{array}
 $$
-\caption{De similariteitsmaten die we gaan gebruiken.}
+\caption{De vaagsimilariteitsmaten die we gaan gebruiken.}
 \label{tab:similatiteitsmaten}
 \end{table}
 
-Alle similariteitsmaten uit deze tabel zijn reflexief. Dit wil zeggen dat 
+Alle vaagsimilariteitsmaten uit deze tabel zijn reflexief. Dit wil zeggen dat 
 voor elke similariteitsmaat $S$ geldt: $S(A,A)=1$. 
 
 \section{Aggregatieoperatoren} 
