--- a/Thesis/inleiding.tex
+++ b/Thesis/inleiding.tex
@@ -18,15 +18,15 @@ Hierbij wordt elke afbeelding voorzien van tekstuele annotaties, zoals bijvoorbe
 bestandsnaam of woorden uit de webpagina waarvan de afbeelding deel uitmaakt. Deze annotaties
 worden gebruikt voor het indexeren van de afbeeldingen in de databank.
 
-De gebruiker van een TBIR-systeem start een zoekactie \'e\'en of meerdere trefwoorden door te geven
+De gebruiker van een TBIR-systeem start een zoekactie door \'e\'en of meerdere trefwoorden door te geven
 aan het systeem. Het systeem vergelijkt deze trefwoorden vervolgens met de annotaties uit
 de databank. De afbeeldingen waarvan er annotaties overeenkomen met een trefwoord, maken
-deel uit van het resultaat van de query. Men hoeft hievoor uiteraard niet alle afbeeldingen
+deel uit van het resultaat van de query. Men hoeft hiervoor uiteraard niet alle afbeeldingen
 uit de databank te overlopen, vermits de databank ge\"indexeerd is op de annotaties. 
 
 \section{Content-based image retrieval}
 
-Omdat de tekst-gebaseerde aanpak in de praktijk dikwijls tekort schiet, is men op zoek gegaan 
+Omdat de tekst-gebaseerde aanpak in de praktijk dikwijls tekortschiet, is men op zoek gegaan 
 naar manieren om het zoeken te baseren op de visuele inhoud van de afbeeldingen 
 \cite{veltcamp:cbirs}. Bij \emph{content-based image retrieval} (CBIR) maakt men gebruik van een proces dat 
 \emph{(visual) feature extraction} genoemd wordt \cite{rui:image_retr}. Dit proces zet een afbeelding om in een 
@@ -67,7 +67,7 @@ te maken van een voorbeeld-schets, maar ook dat is in de praktijk niet altijd ev
 Het is dus zinvol om te zoeken naar manieren om inhoud-gebaseerde aspecten toe te voegen aan
 TBIR-systemen. De manier die we in deze scriptie bespreken is het 
 similariteitsgebaseerd rangschikken van de resultaten van een TBIR-systeem. Hierbij verwachten we
-nog steeds dat de gebruiker een tekstuele query opgeeft, waarop het systeem antwoord met een 
+nog steeds dat de gebruiker een tekstuele query opgeeft, waarop het systeem antwoordt met een 
 lijst van afbeeldingen die overeenkomen met die query. Daarna heeft de gebruiker echter ook nog 
 de mogelijkheid om een verzameling van voorbeeld-afbeeldingen te kiezen uit deze lijst. Het 
 systeem zal er vervolgens voor zorgen dat de zoekresultaten gerangschikt worden in 
