--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -13,6 +13,8 @@
 \usepackage{pst-bar} % moet (blijkbaar) na het scriptiepakket ingevoegd worden
 \usepackage{pst-plot}
 
+\usepackage{mfpic}
+
 
 % lijst met woorden die LaTeX verkeerd splitst
 \hyphenation{vaag-ver-za-me-ling L-vaag-ver-za-me-ling} 
