--- a/Thesis/voorwoord.tex
+++ b/Thesis/voorwoord.tex
@@ -17,7 +17,7 @@ mogelijkheid dit onderzoek te verrichten
 
 \section*{Toelating tot bruikleen}
 De auteur geeft de toelating dit afstudeerwerk voor consultatie 
-beschikbaar te stellen en delen van het afstudeerwerk te copi\"eren voor
+beschikbaar te stellen en delen van het afstudeerwerk te kopi\"eren voor
 persoonlijk gebruik. Elk ander gebruik valt onder de beperkingen van het 
 auteursrecht, in het bijzonder met betrekking tot de verplichting de bron 
 uitdrukkelijk te vermelden bij het aanhalen van resultaten uit dit 
